# agentflow

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  EXAMPLES_TODOs.md  HARNESS_MODE_EVOLUTION.md  IMPLEMENTATION_STATUS.md  LOOP_NODES_IMPLEMENTATION.md  MCP_INTEGRATION.md  MIGRATION_V2.md  MODULE_OPTIMIZATION_REPORT.md  OVERALL_EVALUATION_REPORT.md  PROJECT_EVALUATION_2026-05-01.md  PROJECT_EVALUATION_2026-05-14.md  PROJECT_STATUS_ASSESSMENT.md  README.md  RoadMap.md  TERA_INTEGRATION_ANALYSIS.md  TERA_INTEGRATION_COMPLETE.md  TERA_TEMPLATE_GUIDE.md  TODO.md  TODOs-archive-2026-05-09-n1-n10.md  TODOs.md  comprehensive-workflow-template.yml  debug_yaml.rs  docker-compose.yml  research_summary.html  rustfmt.toml  search_workflow.yml  test_mcp.rs  test_template_json.yml
agentflow-agent-spi/: Cargo.toml
agentflow-agent-spi/src/: capability.rs  lib.rs  runtime.rs  turn.rs
agentflow-agents/: Cargo.toml  README.md
agentflow-agents/examples/: agent_native_react.rs  custom_memory_summary.rs  custom_reflection.rs  custom_runtime.rs  dynamic_workflow_plan.rs  dynamic_workflow_spike.rs  hybrid_workflow_agent.rs  multi_agent.rs  multi_agent_blackboard.rs  multi_agent_debate.rs  multi_agent_handoff.rs  plan_execute_agent.rs  react_agent.rs
agentflow-agents/src/: dynamic.rs  lib.rs  plan_execute.rs  reflection.rs  runtime.rs  token_counter_adapter.rs
agentflow-agents/tests/: agent_node_resume_contract.rs  agent_runtime_golden.rs  agent_trace_compat.rs  prompt_assembly_benchmarks.rs  prompt_assembly_golden.rs
agentflow-async-util/: Cargo.toml
agentflow-async-util/src/: lib.rs  race.rs  retry.rs  timeout.rs
agentflow-cli/: 37100c46-d57e-489d-a8d5-f53805753cd8.yml  Cargo.toml  README.md  b6953d3b-0442-4b23-bee5-1e64898f7549.yml
agentflow-cli/examples/: FIXES_AND_IMPROVEMENTS.md  README.md  ai_research_assistant.yml  quick_start.sh  stepfun_vision_models.md  workflow_examples.yml
agentflow-cli/src/: json_envelope.rs  lib.rs  main.rs  redaction.rs  server_client.rs  shutdown.rs
agentflow-cli/templates/: LOOP_NODES_GUIDE.md  llm-chain.yml  map-example.yml  map-parallel-example.yml  map-simple-test.yml  simple.yml  tera-complex-report-example.yml  tera-conditional-example.yml  tera-filters-example.yml  tera-loop-example.yml  while-advanced-example.yml  while-example.yml
agentflow-cli/tests/: agent_replay_tests.rs  audio_asr_prompt_tests.rs  cleanup_cli_tests.rs  cli_server_mode.rs  config_cli_tests.rs  doctor_cli_tests.rs  eval_cli_tests.rs  harness_cli_tests.rs  harness_replay_tests.rs  json_envelope_migration_tests.rs  marketplace_cli_tests.rs  marketplace_unpack_hardening_tests.rs  mcp_config_cli_tests.rs  memory_prune_tests.rs  p3_8_cross_hop_e2e.rs  plugin_cli_tests.rs  plugin_traceparent_tests.rs  rag_eval_cli_tests.rs  resume_plan_tests.rs  serve_cli_tests.rs  skill_cli_tests.rs  skill_inspect_mcp_discovery_tests.rs  skill_run_server_tests.rs  trace_cli_tests.rs  workflow_ctrl_c_tests.rs  workflow_dynamic_tests.rs  workflow_logs_tests.rs  workflow_run_server_validation_tests.rs  workflow_tests.rs  workspace_metadata_tests.rs
agentflow-config/: Cargo.toml
agentflow-config/src/: diagnostics.rs  lib.rs
agentflow-core/: Cargo.toml  PERFORMANCE.md  README.md
agentflow-core/benches/: hot_paths.rs  scheduler.rs
agentflow-core/examples/: checkpoint_recovery.rs  config_first_workflow.rs  fault_recovery_demo.rs  fixed_dag_workflow.rs  hello_world.rs  logging_demo.rs  metrics_example.rs  plugin_host_demo.rs  production_workflow.rs  resource_management_example.rs  retry_example.rs  simple_llm_workflow.rs
agentflow-core/src/: async_flow.rs  async_node.rs  checkpoint.rs  concurrency.rs  config.rs  error.rs  error_context.rs  events.rs  expr.rs  flow.rs  health.rs  lib.rs  logging.rs  metrics.rs  node.rs  observability.rs  resource_limits.rs  resource_manager.rs  resume.rs  retry.rs  retry_executor.rs  robustness.rs  runner.rs  scheduler.rs  shared_state.rs  shutdown.rs  state_monitor.rs  state_size.rs  timeout.rs  value.rs  workflow_runner.rs
agentflow-core/tests/: checkpoint_recovery_test.rs  flow_value_checkpoint_compat.rs  integration_tests.rs  large_dag_benchmarks.rs  performance_benchmarks.rs  phase1_integration_tests.rs  plugin_manifest_compat.rs  plugin_poc.rs  plugin_signed_fixture.rs  state_size_observer_tests.rs
agentflow-db/: Cargo.toml
agentflow-db/migrations/: 0001_initial_schema.sql  0002_harness_sessions.sql  0003_tenant_id_columns.sql  0004_user_preferences.sql  0005_run_retention_overrides.sql  0006_mcp_sessions_tenant_id.sql
agentflow-db/src/: database.rs  error.rs  lib.rs  models.rs  repo.rs
agentflow-db/tests/: migrations.rs  repositories.rs
agentflow-graph/: Cargo.toml
agentflow-graph/src/: checkpoint.rs  error.rs  events.rs  flow.rs  lib.rs  runner.rs  state_size.rs
agentflow-harness/: Cargo.toml
agentflow-harness/src/: approval.rs  approval_providers.rs  compaction.rs  context.rs  error.rs  event.rs  flow_run.rs  hooks.rs  hooks_runtime.rs  lib.rs  params_summary.rs  persistence.rs  providers.rs  runtime.rs  seq.rs  tasks.rs  tracing_bridge.rs
agentflow-harness/tests/: envelope_contract.rs  flow_governance.rs  runtime_react_smoke.rs
agentflow-llm/: .gitignore  Cargo.toml  README.md
agentflow-llm/benches/: provider_hop.rs
agentflow-llm/config/: config.yml
agentflow-llm/docs/: configuration-organization-analysis.md  stepfun-api-examples.md  (+1 more)
agentflow-mcp/: Cargo.toml  TESTING.md
agentflow-memory/: Cargo.toml
agentflow-nodes/: Cargo.toml  OPENAI_FIX_SUMMARY.md  OPENAI_TESTING.md  README.md  test_openai.sh
agentflow-nodes-ai/: Cargo.toml
agentflow-rag/: Cargo.toml  ONNX_MODELS.md  PHASE3_CHANGELOG.md  PHASE3_SUMMARY.md  RAG_FUTURE_TASKS.md
agentflow-server/: Cargo.toml  build.rs
agentflow-skills/: Cargo.toml
agentflow-store-spi/: Cargo.toml
agentflow-tools/: Cargo.toml
agentflow-tracing/: Cargo.toml
agentflow-value/: Cargo.toml
agentflow-viz/: Cargo.toml
agentflow-worker/: Cargo.toml
agentflow-worker-proto/: Cargo.toml
xtask/: Cargo.toml
(+987 files in other folders)
