[workspace]
members = [
  "agentflow-core", 
  "agentflow-llm", 
  "agentflow-cli",
  "agentflow-mcp",
  "agentflow-agents",
  "agentflow-agents/agents/paper_research_analyzer"
]
resolver = "2"

[package]
name = "agentflow"
version = "0.1.0"
edition = "2021"
authors = ["AgentFlow Contributors"]
description = "A high-performance LLM framework inspired by PocketFlow"
repository = "https://github.com/agentflow/agentflow"
license = "MIT"
keywords = ["llm", "ai", "workflow", "agent", "mcp"]
categories = ["development-tools", "web-programming"]

[features]
default = []
observability = ["agentflow-core/observability"]

[dependencies]
agentflow-core = { path = "agentflow-core" }
agentflow-llm = { path = "agentflow-llm" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "simple_agent_llm_flow"
path = "examples/simple_agent_llm_flow.rs"

[[example]]
name = "multimodal_agent_flow"
path = "examples/multimodal_agent_flow.rs"

[[example]]
name = "recipe_finder_real_llm"
path = "examples/recipe_finder_real_llm.rs"

[[example]]
name = "pdf_research_analyzer"
path = "examples/pdf_research_analyzer.rs"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
