[workspace]
members = [
  "agentflow-value",
  "agentflow-graph",
  "agentflow-store-spi",
  "agentflow-agent-spi",
  "agentflow-async-util",
  "agentflow-core",
  "agentflow-nodes",
  "agentflow-config",
  "agentflow-llm",
  "agentflow-cli",
  "agentflow-mcp",
  "agentflow-rag",
  "agentflow-agents",
  "agentflow-tracing",
  "agentflow-tools",
  "agentflow-memory",
  "agentflow-skills",
  "agentflow-db",
  "agentflow-server",
  "agentflow-worker",
  "agentflow-worker-proto",
  "agentflow-harness",
  "xtask",
#   "agentflow-agents/agents/paper_assistant",
]
resolver = "2"

# Shared package metadata (Rust 1.64+ workspace inheritance, P10.0.2-FU1).
# Every publishable member opts in via `<field>.workspace = true` instead
# of duplicating these values in its own [package] table. Three immediate
# wins:
#   1. `cargo publish --dry-run` no longer warns about missing
#      `repository` / `homepage` (the canonical pre-GA fix for the
#      warning P10.0.2 surfaced workspace-wide).
#   2. A future repo rename / org move is a one-line change here
#      instead of a 15-file `sed`.
#   3. `edition`, `license`, `authors` stop drifting between crates.
# `xtask` keeps `publish = false` and does not opt in — internal-only.
[workspace.package]
edition = "2024"
license = "MIT"
authors = ["yuxuetr", "AgentFlow Contributors"]
repository = "https://github.com/yuxuetr/agentflow"
homepage = "https://github.com/yuxuetr/agentflow"

[profile.dev.package."*"]
debug = 1

# Q5.1 (wave 2 closure, 2026-05-26): production library code is
# `unwrap()` / `expect()` clean across the workspace.
#
# Enforcement lives in CI, not here:
#   The workspace `[lints]` table applies uniformly to every target,
#   and the existing clippy CI job runs `-D warnings`. Setting a
#   `warn`-level lint here would escalate to deny and break ~438
#   legitimate `unwrap()`/`expect()` sites in test code that the
#   wave-2 scope doesn't include.
#
#   Instead a dedicated `.github/workflows/quality.yml` `clippy-lib-deny`
#   step runs:
#     cargo clippy --workspace --lib --no-deps \
#       -- -D clippy::unwrap_used -D clippy::expect_used -A warnings
#   so production library code is enforced without touching tests.
#
#   When wave 3 batches test-side annotations, swap to a workspace-level
#   `[workspace.lints.clippy]` block with priorities tuned for `-D warnings`
#   coexistence (or simply require the per-test `#![allow]` preamble at
#   the top of every `tests/*.rs` file).
#
# Production-code annotations: sites where the lint correctly fires on a
# documented build-time invariant (compile-time regex, JSON serialisation
# of a String-only struct, etc.) are explicitly annotated with
# `#[allow(clippy::expect_used, reason = "...")]` so the rationale
# travels with the code rather than living in this file.
