[package]
name = "agentflow-agent-spi"
version = "0.1.0"
description = "Agent runtime contracts for AgentFlow — AgentRuntime, AgentEvent, AgentStep, AgentContext"
keywords = ["ai", "agents", "runtime"]
categories = ["data-structures"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agentflow-store-spi = { path = "../agentflow-store-spi", version = "0.1" }
agentflow-tools = { path = "../agentflow-tools", version = "0.1" }
agentflow-llm = { path = "../agentflow-llm", version = "0.2" }
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync"] }
