[package]
name = "agentflow-agents"
version = "0.1.0"
edition = "2021"
authors = ["AgentFlow Contributors"]
description = "Reusable AI agent applications and utilities for AgentFlow"
license = "MIT"
keywords = ["ai", "agents", "workflow", "llm"]
categories = ["development-tools"]

[dependencies]
agentflow-core = { path = "../agentflow-core" }
agentflow-llm = { path = "../agentflow-llm" }
agentflow-mcp = { path = "../agentflow-mcp" }

# Common dependencies for agents
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []