[package]
name = "agentflow-agents"
version = "0.2.0"
description = "Reusable AI agent applications and utilities for AgentFlow"
keywords = ["ai", "agents", "workflow", "llm"]
categories = ["development-tools"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agentflow-core = { path = "../agentflow-core", version = "0.2" }
agentflow-llm = { path = "../agentflow-llm", version = "0.2" }
agentflow-mcp = { path = "../agentflow-mcp", version = "0.2" }
agentflow-tools = { path = "../agentflow-tools", version = "0.1" }
agentflow-agent-spi = { path = "../agentflow-agent-spi", version = "0.1" }
agentflow-memory = { path = "../agentflow-memory", version = "0.1" }

# Common dependencies for agents
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "default-tls"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
regex = "1"
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"

[features]
default = []
