[package]
name = "agentflow-cli"
version = "0.1.0"
edition = "2021"
authors = ["AgentFlow Contributors"]
description = "Command-line interface for AgentFlow workflow orchestration"
repository = "https://github.com/agentflow/agentflow"
license = "MIT"
keywords = ["llm", "ai", "workflow", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agentflow"
path = "src/main.rs"

[dependencies]
# Core dependencies
agentflow-core = { path = "../agentflow-core" }
agentflow-llm = { path = "../agentflow-llm" }

# CLI framework
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }
clap_complete = "4.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Template engine
tera = "1.19"

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# File handling and utilities
walkdir = "2.4"
glob = "0.3"
mime = "0.3"
base64 = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and output
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
indicatif = "0.17"
console = "0.15"
colored = "2.1"

# Configuration
config = "0.13"
dirs = "5.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"