[package]
name = "agentflow-cli"
version = "0.2.0"
edition = "2024"
authors = ["AgentFlow Contributors"]
description = "Command-line interface for AgentFlow workflow orchestration"
repository = "https://github.com/agentflow/agentflow"
license = "MIT"
keywords = ["llm", "ai", "workflow", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agentflow"
path = "src/main.rs"


[features]
default = []
mcp = ["agentflow-nodes/mcp"]
rag = ["agentflow-nodes/rag", "agentflow-rag"]
# Enables the subprocess plugin runtime for `type: plugin` workflow nodes.
# See docs/PLUGIN_DESIGN.md.
plugin = ["agentflow-core/plugin"]

[dependencies]
# Core dependencies
agentflow-core = { path = "../agentflow-core" }
agentflow-nodes = { path = "../agentflow-nodes" }
agentflow-llm = { path = "../agentflow-llm" }
agentflow-mcp = { path = "../agentflow-mcp" }
agentflow-rag    = { path = "../agentflow-rag", optional = true }
agentflow-skills = { path = "../agentflow-skills" }
agentflow-agents = { path = "../agentflow-agents" }
agentflow-tracing = { path = "../agentflow-tracing" }
agentflow-tools = { path = "../agentflow-tools" }
agentflow-harness = { path = "../agentflow-harness" }
agentflow-memory = { path = "../agentflow-memory" }

# CLI framework
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }
clap_complete = "4.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Template engine
tera = "1.19"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "default-tls"] }

# File handling and utilities
walkdir = "2.4"
glob = "0.3"
mime = "0.3"
base64 = "0.21"
tempfile = "3.8"
tar = "0.4"
flate2 = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Auto-load ~/.agentflow/.env on every CLI invocation. Silent no-op
# when the file is missing; existing env vars take precedence over
# file values (dotenvy's default behaviour) so operator-provided
# overrides via `MOONSHOT_API_KEY=... agentflow ...` keep working.
dotenvy = "0.15"

# Logging and output
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
indicatif = "0.17"
console = "0.15"
colored = "2.1"

# Configuration
config = "0.13"
dirs = "5.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Lookup binaries on PATH — used by `agentflow doctor --check-installations`
# (P3.4) to verify declared MCP server commands resolve.
which = "6.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
sha2 = "0.10"
# Used by the P2.5 server-mode integration tests to spin up the
# `agentflow-server` HTTP gateway against the test Postgres so the
# CLI client can drive it end-to-end. Self-skips without
# AGENTFLOW_DATABASE_TEST_URL.
agentflow-server = { path = "../agentflow-server" }
agentflow-db = { path = "../agentflow-db" }
axum = "0.7"
