[package]
name = "agentflow-cli"
version = "0.2.0"
description = "Command-line interface for AgentFlow workflow orchestration"
keywords = ["llm", "ai", "workflow", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "agentflow"
path = "src/main.rs"


[features]
# Q3.5.2: `plugin` and `rag` are documented in CLAUDE.md / RoadMap.md
# N10 as production-ready / closed and `agentflow plugin` / `agentflow
# rag *` are surfaced in the help text. Shipping them off-by-default
# meant a fresh `cargo install agentflow-cli` produced a stub
# `FeatureUnavailableArgs` message instead of the actual command —
# pure doc-vs-build drift. Keep `mcp` opt-in because `agentflow mcp
# *` itself does not need the `agentflow-nodes/mcp` feature (the CLI
# already depends on `agentflow-mcp` directly); the gate only
# matters when a workflow uses `type: mcp`.
default = ["plugin", "rag"]
mcp = ["agentflow-nodes/mcp"]
rag = ["agentflow-nodes/rag", "agentflow-rag"]
# Enables the subprocess plugin runtime for `type: plugin` workflow nodes.
# See docs/PLUGIN_DESIGN.md.
plugin = ["agentflow-core/plugin"]

[dependencies]
# Core dependencies
agentflow-core = { path = "../agentflow-core", version = "0.2" }
agentflow-nodes = { path = "../agentflow-nodes", version = "0.2" }
agentflow-llm = { path = "../agentflow-llm", version = "0.2" }
agentflow-mcp = { path = "../agentflow-mcp", version = "0.2" }
agentflow-rag    = { path = "../agentflow-rag", version = "0.3.0-alpha", optional = true }
agentflow-skills = { path = "../agentflow-skills", version = "0.1" }
agentflow-agents = { path = "../agentflow-agents", version = "0.2" }
agentflow-tracing = { path = "../agentflow-tracing", version = "0.1" }
agentflow-tools = { path = "../agentflow-tools", version = "0.1" }
agentflow-harness = { path = "../agentflow-harness", version = "0.1" }
agentflow-memory = { path = "../agentflow-memory", version = "0.1" }

# CLI framework
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }
clap_complete = "4.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Template engine
tera = "1.19"

# HTTP client. `stream` enables `Response::bytes_stream()` for the
# P10.11.1 `workflow logs --follow` SSE consumer.
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "default-tls"] }
# Stream trait `next()` for the SSE consumer.
futures = "0.3"

# File handling and utilities
walkdir = "2.4"
glob = "0.3"
mime = "0.3"
base64 = "0.21"
tempfile = "3.8"
tar = "0.4"
flate2 = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Auto-load ~/.agentflow/.env on every CLI invocation. Silent no-op
# when the file is missing; existing env vars take precedence over
# file values (dotenvy's default behaviour) so operator-provided
# overrides via `MOONSHOT_API_KEY=... agentflow ...` keep working.
dotenvy = "0.15"

# Logging and output
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
indicatif = "0.17"
console = "0.15"
colored = "2.1"

# Configuration
config = "0.13"
dirs = "5.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Lookup binaries on PATH — used by `agentflow doctor --check-installations`
# (P3.4) to verify declared MCP server commands resolve.
which = "6.0"

# Stable hashing for the skill-inspect MCP discovery cache
# (~/.agentflow/cache/skill_mcp_discovery.json keyed by the hash of
# the manifest's mcp_servers section). P10.9.1.
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
# Used by the P2.5 server-mode integration tests to spin up the
# `agentflow-server` HTTP gateway against the test Postgres so the
# CLI client can drive it end-to-end. Self-skips without
# AGENTFLOW_DATABASE_TEST_URL.
agentflow-server = { path = "../agentflow-server" }
agentflow-db = { path = "../agentflow-db" }
axum = "0.7"
# P3.8 E2E cross-hop acceptance test constructs a tonic Request
# (the worker gRPC carrier) without going through a full Channel.
# Test-only; the cli library itself doesn't speak gRPC.
tonic = "0.12"
