[package]
name = "agentflow-core"
version = "0.1.0"
edition = "2021"
authors = ["yuxuetr"]
description = "Core traits and execution engine for AgentFlow"
license = "MIT"

# [[example]]
# name = "hello_world"
# path = "examples/hello_world.rs"
# 
# [[example]]
# name = "simple_llm_workflow"
# path = "examples/simple_llm_workflow.rs"


[features]
default = []
observability = ["tracing"]

[dependencies]
# Core serialization and JSON support (for SharedState and node communication)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async runtime and traits
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# Time and date handling for observability
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions for text processing
regex = "1.0"

# Removed: HTTP client moved to agentflow-nodes

# Optional observability support
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing-test = "0.2"
