[package]
name = "agentflow-core"
version = "0.2.0"
description = "Core traits and execution engine for AgentFlow"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

# [[example]]
# name = "hello_world"
# path = "examples/hello_world.rs"
# 
# [[example]]
# name = "simple_llm_workflow"
# path = "examples/simple_llm_workflow.rs"


[features]
default = []
observability = ["tracing"]
# Enables the subprocess plugin runtime (PluginHost, PluginNode, manifest loading).
plugin = ["dep:toml"]

[dependencies]
# Core serialization and JSON support (for SharedState and node communication)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async runtime and traits
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# Time and date handling for observability
chrono = { version = "0.4", features = ["serde"] }
humantime-serde = "1.1"
tracing = { version = "0.1", optional = true }

# Random number generation for retry jitter
rand = "0.8"

# Regular expressions for text processing
regex = "1.0"

# URL parsing for security validation
url = "2.5"

# CPU core count for concurrency defaults
num_cpus = "1.16"

# Directory utilities (for checkpoint paths)
dirs = "5.0"

# Plugin manifest parsing (subprocess plugin runtime, gated behind `plugin` feature)
toml = { version = "0.8", optional = true }

# Demo plugin executable shipped with this crate as a reference implementation
# of the plugin protocol. Built only when the `plugin` feature is enabled to
# avoid extra compile time for default consumers.
[[bin]]
name = "agentflow-echo-plugin"
path = "src/bin/echo_plugin.rs"
required-features = ["plugin"]

[[example]]
name = "plugin_host_demo"
path = "examples/plugin_host_demo.rs"
required-features = ["plugin"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"
tempfile = "3.8"
proptest = "1.5"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "scheduler"
harness = false
