[package]
name = "agentflow-db"
version = "0.1.0"
edition = "2024"
authors = ["AgentFlow Contributors"]
description = "Database persistence and models for the AgentFlow Gateway"
license = "MIT"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
