[package]
name = "agentflow-graph"
version = "0.1.0"
description = "AgentFlow execution IR — AsyncNode, GraphNode, Flow, and the FlowValue/error contracts"
keywords = ["ai", "agents", "workflow", "dag"]
categories = ["data-structures"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agentflow-value = { path = "../agentflow-value", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["time"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
