[package]
name = "agentflow-llm"
version = "0.1.0"
edition = "2021"
authors = ["AgentFlow Contributors"]
description = "LLM integration crate for AgentFlow - unified interface for multiple LLM providers"
license = "MIT"

[features]
default = ["openai", "anthropic", "google", "logging"]
openai = []
anthropic = []
google = []
observability = ["tracing"]
logging = ["tracing", "tracing-subscriber"]

[dependencies]
# Core async and serialization
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client and networking
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-stream = "0.1"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Environment and configuration
dotenvy = "0.15"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# Observability and logging
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
log = "0.4"

# AgentFlow integration
agentflow-core = { path = "../agentflow-core" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
mockito = "1.0"
tracing-test = "0.2"
env_logger = "0.10"
tempfile = "3.8"

[[example]]
name = "multimodal_demo"
path = "examples/multimodal_demo.rs"

[[example]]
name = "granular_types_demo"
path = "examples/granular_types_demo.rs"