[package]
name = "agentflow-llm"
version = "0.2.0"
edition = "2024"
authors = ["yuxuetr"]
description = "LLM integration crate for AgentFlow - unified interface for multiple LLM providers"
license = "MIT"

[lib]
doctest = false

[features]
default = ["openai", "anthropic", "google", "logging"]
openai = []
anthropic = []
google = []
# `tracing` is now a hard dependency (matching every other agentflow-* crate);
# `observability` is kept as an empty alias so existing callers keep building.
observability = []
# `logging` adds the `tracing-subscriber` setup helpers on top of the always-on
# `tracing` macros.
logging = ["dep:tracing-subscriber"]

[dependencies]
# Core async and serialization
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client and networking
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "default-tls"] }
tokio-stream = "0.1"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Environment and configuration
dotenvy = "0.15"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# Observability and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
log = "0.4"

# AgentFlow integration
agentflow-core = { path = "../agentflow-core" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
mockito = "1.0"
tracing-test = "0.2"
env_logger = "0.10"
tempfile = "3.8"
futures-util = "0.3"
base64 = "0.21"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "provider_hop"
harness = false
