[package]
name = "agentflow-llm"
version = "0.2.0"
description = "LLM integration crate for AgentFlow - unified interface for multiple LLM providers"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
doctest = false

[features]
default = ["openai", "anthropic", "google", "logging"]
openai = []
anthropic = []
google = []
# `tracing` is now a hard dependency (matching every other agentflow-* crate);
# `observability` is kept as an empty alias so existing callers keep building.
observability = []
# `logging` adds the `tracing-subscriber` setup helpers on top of the always-on
# `tracing` macros.
logging = ["dep:tracing-subscriber"]

[dependencies]
# Core async and serialization
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client and networking
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "default-tls"] }
tokio-stream = "0.1"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Environment and configuration
dotenvy = "0.15"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# Observability and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
log = "0.4"

# Provider-specific tokenizers (P10.3.3). `tiktoken-rs` ships the
# OpenAI BPE encodings (cl100k_base, o200k_base, p50k_base, r50k_base)
# used by every OpenAI-family model — GPT-3.5 / 4 / 4o, plus the
# OpenAI-compat vendors that adopted the same tokenizer (Moonshot Kimi,
# DeepSeek-V*, GLM-4, DashScope Qwen, MiniMax). Anthropic / Google use
# SentencePiece variants and fall back to the heuristic counter (their
# APIs report precise counts in the response so post-call accounting
# stays exact; pre-call budgeting is the gap this dep closes for the
# BPE family).
tiktoken-rs = "0.6"

# Q3.6.1: removed the dead `agentflow-core` dependency. It was declared
# in [dependencies] but never imported anywhere in this crate's source,
# bloating compile times and creating a false impression of a coupling
# direction (llm → core) that doesn't actually exist.

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
mockito = "1.0"
tracing-test = "0.2"
env_logger = "0.10"
tempfile = "3.8"
futures-util = "0.3"
base64 = "0.21"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "provider_hop"
harness = false
