[package]
name = "agentflow-mcp"
version = "0.2.0"
edition = "2021"
authors = ["yuxuetr"]
description = "Model Context Protocol (MCP) integration for AgentFlow workflow system"
license = "MIT"
keywords = ["mcp", "ai", "agents", "workflow", "llm"]
categories = ["development-tools"]
repository = "https://github.com/yuxuetr/agentflow"

[dependencies]
# Official MCP Rust SDK (commented until available)
# rmcp = "0.1" 
# rmcp-macros = "0.1"

# Core async and serialization
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Additional utilities
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
client = []
server = []
stdio = []
http = []