[package]
name = "agentflow-memory"
version = "0.1.0"
edition = "2021"
authors = ["AgentFlow Contributors"]
description = "Session and long-term memory management for AgentFlow agents"
license = "MIT"
keywords = ["ai", "agents", "memory", "llm"]
categories = ["development-tools"]

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tracing = "0.1"
agentflow-rag = { path = "../agentflow-rag", default-features = false }

[dev-dependencies]
tokio-test = "0.4"
